fixed overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -151,6 +151,7 @@ img {
   margin: 0 auto;
   max-width: 800px;
   width: 100%;
+  height: 100%;
 }
 @media (max-width: 500px) {
   .container {
@@ -206,17 +207,19 @@ header h1 {
   margin-bottom: 10px;
 }
 .container .img-content {
-  height: 100%;
   width: 100%;
 }
 .container .img-content img {
   width: 100%;
+  height: 100%;
   max-height: 200px;
 }
 .container .content-lift {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
 }
 .container .content-lift .text-content {
   font-size: 1.6rem;
@@ -255,6 +258,10 @@ header h1 {
     display: none;
   }
 }
+.container .content-visit {
+  height: 100%;
+  width: 100%;
+}
 .container .content-visit .text-content {
   font-size: 1.6rem;
   padding: 20px 2.5%;
@@ -269,6 +276,8 @@ header h1 {
   margin: 10px 0;
 }
 .container .content-walk {
+  height: 100%;
+  width: 100%;
   border-top: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
   display: flex;
@@ -282,6 +291,7 @@ header h1 {
 }
 .container .content-walk .text-content {
   font-size: 1.6rem;
+  height: 100%;
   width: 50%;
 }
 @media (max-width: 500px) {
