--- a/less/global.less
+++ b/less/global.less
@@ -24,6 +24,7 @@ img {
   margin: 0 auto;
   max-width: 800px;
   width: 100%;
+  height: 100%;
 
   @media @phone {
     flex-direction: column;
