--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,11 +25,11 @@ header {
 .container {
 
   .img-content {
-    height: 100%;
     width: 100%;
 
     img {
       width: 100%;
+      height: 100%;
       max-height: 200px;
     }
   }
@@ -37,6 +37,8 @@ header {
   .content-lift {
     .flex-space-between;
     flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
 
 
     .text-content {
@@ -87,6 +89,9 @@ header {
   
 
   .content-visit {
+    height: 100%;
+    width: 100%;
+
     .text-content {
       font-size: 1.6rem;
       padding: 20px 2.5%;
@@ -107,6 +112,8 @@ header {
   }
 
   .content-walk {
+    height: 100%;
+    width: 100%;
     border-top: 1px solid @accent-color;
     border-bottom: 1px solid @accent-color;
     display: flex;
@@ -119,6 +126,7 @@ header {
     
     .text-content {
       font-size: 1.6rem;
+      height: 100%;
       width: 50%;
 
       @media @phone {
